//
//  Contact.swift
//  Swift3Demo
//
//  Created by pisen on 16/9/30.
//  Copyright © 2016年 丁文凯. All rights reserved.
//

import UIKit

class Contact{
    var name:String
    var subName:String
    var phone:String
    var email :String
    
    init() {
        name = ""
        subName = ""
        phone = ""
        email = ""
    }
}
