...
        alertController.addAction(cancelAction)
        let okAction = UIAlertAction(title:"你才是",style:.default){_ in
            
            print("you have pressed OK button");
            
            let userName = alertController.textFields![0].text
            let password = alertController.textFields![1].text
            
            self.doSomething(userName, password: password)
        }
        alertController.addAction(okAction)
        
        alertController.addTextField { (textField:UITextField) in
...
